Fixed nonresponsive TOC on mobile

--- a/css/mathbook-gt-add-on.css
+++ b/css/mathbook-gt-add-on.css
@@ -79,6 +79,10 @@ body, html body {
     vertical-align: middle;
 }
 
+#toc {
+  pointer-events: initial;
+}
+
 #toc h2 + h2 {
     margin-top: 0px;
 }
